Fix progNoteToolbar alignment when only 'basic' 'full' note present
#215

--- a/src/clientFilePage/progNotesTab.styl
+++ b/src/clientFilePage/progNotesTab.styl
@@ -218,6 +218,8 @@
 								cursor default
 
 								h3
+									padding 20px 0 10px 0
+									margin 0
 									font-size 22px
 
 								&.selected, &:hover
